--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,9 @@ gunicorn = "*"
 cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
+flask-jwt-extended = "*"
+flask-swagger-ui = "*"
+flask-script = "*"
 
 [requires]
 python_version = "3.10"
